# aoc2021

./: Cargo.toml  README.md  build.rs
data/: challenges.json
src/: aoc.rs  common.rs  lib.rs  main.rs  prompt.rs  sub.rs  verbs.rs
src/aoc/: challenge.rs  prompt.rs  solution.rs
src/aoc/solution/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  solutions_implemented.rs
src/common/: helpers.rs  map2d.rs  sub.rs  vector.rs
src/common/map2d/: cursor.rs  value.rs
src/common/sub/: movements.rs
src/common/vector/: component.rs  vector.rs
src/common/vector/vector/: iter.rs
src/sub/: bingo.rs  crypto.rs  diagnostics.rs  heightmaps.rs  modelling.rs  movement.rs  navigation.rs  pathfinding.rs  scanning.rs
src/sub/bingo/: bingo.rs  board.rs
src/sub/crypto/: seven_segment.rs  unscramble.rs
src/sub/diagnostics/: common.rs  counts.rs  filters.rs  frequency.rs
src/sub/heightmaps/: basins.rs  heightmap.rs
src/sub/modelling/: crab_subs.rs  lanternfish.rs  octopuses.rs
src/sub/modelling/crab_subs/: metadata.rs
src/sub/modelling/lanternfish/: pool.rs
src/sub/movement/: styles.rs
src/sub/navigation/: chunk.rs
src/sub/navigation/chunk/: parser.rs
src/sub/pathfinding/: cave_systems.rs  danger_map.rs  hydrothermal_vents.rs  line_segment.rs
src/sub/pathfinding/cave_systems/: system.rs
src/sub/pathfinding/cave_systems/system/: connections.rs  nodes.rs
src/sub/pathfinding/hydrothermal_vents/: line_segment.rs
src/verbs/: depth_scan.rs  move_sub.rs  process_diagnostics.rs
