[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micromath = { version = "2.0.0", features = ["vector"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
serde_scan = "0.4.1"